--- a/sasheramed/Features/Auth/UI/Base.lproj/Auth.storyboard
+++ b/sasheramed/Features/Auth/UI/Base.lproj/Auth.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment version="2304" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -139,7 +139,7 @@
                                         </constraints>
                                         <color key="textColor" red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="15"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" textContentType="username"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                 <real key="value" value="5"/>
@@ -155,7 +155,7 @@
                                         </constraints>
                                         <color key="textColor" red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="15"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
                                                 <size key="value" width="0.0" height="3"/>
@@ -258,6 +258,10 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hpi-rr-TWx"/>
                     </view>
+                    <connections>
+                        <outlet property="tfLogin" destination="8zj-Eu-0oD" id="N4R-Vj-tgT"/>
+                        <outlet property="tfPass" destination="8DU-sh-WJr" id="MKH-4i-BXz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qXk-ZJ-LrE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -556,6 +560,11 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ANM-85-rNw"/>
                     </view>
+                    <connections>
+                        <outlet property="tfEmail" destination="FOE-Yq-hIa" id="aP2-nX-ObZ"/>
+                        <outlet property="tfName" destination="uuS-cq-H1B" id="roJ-IC-bXA"/>
+                        <outlet property="tfPatronymic" destination="CPe-LF-9Q4" id="GSj-9K-PEO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="33u-DL-sLG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -563,7 +572,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="LogoHorizontal" width="1012" height="160"/>
-        <image name="logo_big" width="620" height="640"/>
+        <image name="LogoHorizontal" width="253" height="40"/>
+        <image name="logo_big" width="155" height="160"/>
     </resources>
 </document>
