--- a/sasheramed/Features/User/UI/User.storyboard
+++ b/sasheramed/Features/User/UI/User.storyboard
@@ -15,7 +15,7 @@
             <objects>
                 <viewController storyboardIdentifier="PersonalAreaVC" id="tT5-0Y-W4T" customClass="PersonalAreaVC" customModule="sasheramed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cRd-bg-xZK">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="700"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="800"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ЛИЧНЫЙ КАБИНЕТ" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GT0-R0-lTh">
@@ -29,10 +29,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RKz-fa-yss">
-                                <rect key="frame" x="0.0" y="70" width="320" height="630"/>
+                                <rect key="frame" x="0.0" y="70" width="320" height="730"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TWn-iX-4I5">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="623"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="683"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ваши данные" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JaD-Vw-gr9">
                                                 <rect key="frame" x="15" y="20" width="129" height="22"/>
@@ -221,9 +221,28 @@
                                                     <constraint firstAttribute="width" constant="20" id="jaM-Oc-30r"/>
                                                 </constraints>
                                             </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AfB-Hm-bpz">
+                                                <rect key="frame" x="15" y="612" width="290" height="60"/>
+                                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="15"/>
+                                                <state key="normal" title="Выйти">
+                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="onClickBack:" destination="tT5-0Y-W4T" eventType="touchUpInside" id="x2m-rt-pDU"/>
+                                                </connections>
+                                            </button>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tGl-4p-URy">
+                                                <rect key="frame" x="15" y="672" width="290" height="1"/>
+                                                <color key="backgroundColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="1" id="h1X-2f-zqg"/>
+                                                </constraints>
+                                            </view>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
+                                            <constraint firstItem="tGl-4p-URy" firstAttribute="top" secondItem="AfB-Hm-bpz" secondAttribute="bottom" id="0Dh-Ei-5TD"/>
+                                            <constraint firstAttribute="trailing" secondItem="tGl-4p-URy" secondAttribute="trailing" constant="15" id="0NC-cm-U7Q"/>
                                             <constraint firstItem="EHm-jQ-Qd1" firstAttribute="leading" secondItem="gLL-sD-skA" secondAttribute="leading" constant="15" id="1Ko-E8-hCT"/>
                                             <constraint firstItem="Vot-Ym-SKs" firstAttribute="leading" secondItem="gLL-sD-skA" secondAttribute="leading" constant="15" id="1ZI-sd-xak"/>
                                             <constraint firstItem="gLL-sD-skA" firstAttribute="trailing" secondItem="16R-MF-yBA" secondAttribute="trailing" constant="15" id="24r-gB-HOO"/>
@@ -241,6 +260,7 @@
                                             <constraint firstItem="gLL-sD-skA" firstAttribute="trailing" secondItem="Vot-Ym-SKs" secondAttribute="trailing" constant="15" id="CsO-YL-ul9"/>
                                             <constraint firstItem="Mdo-Cb-Stx" firstAttribute="leading" secondItem="TWn-iX-4I5" secondAttribute="leading" constant="15" id="Csa-vK-X3h"/>
                                             <constraint firstItem="OeB-lF-O6w" firstAttribute="top" secondItem="Rf4-EF-Dfw" secondAttribute="bottom" constant="5" id="DPJ-oc-C0R"/>
+                                            <constraint firstItem="AfB-Hm-bpz" firstAttribute="height" secondItem="Vot-Ym-SKs" secondAttribute="height" id="E2C-bT-Nl6"/>
                                             <constraint firstItem="xp7-kS-H2l" firstAttribute="leading" secondItem="gLL-sD-skA" secondAttribute="leading" constant="15" id="EOS-lg-fNh"/>
                                             <constraint firstItem="dvO-UF-SzK" firstAttribute="top" secondItem="Vot-Ym-SKs" secondAttribute="bottom" id="EdU-tk-keX"/>
                                             <constraint firstItem="HH9-hg-t8D" firstAttribute="top" secondItem="Mac-3k-W2R" secondAttribute="bottom" constant="20" id="Go8-pC-09R"/>
@@ -251,6 +271,7 @@
                                             <constraint firstItem="m4D-f6-SZe" firstAttribute="leading" secondItem="gLL-sD-skA" secondAttribute="leading" constant="15" id="JZF-6c-hmu"/>
                                             <constraint firstItem="AvV-d1-0Yv" firstAttribute="leading" secondItem="gLL-sD-skA" secondAttribute="leading" constant="15" id="K32-VJ-2fz"/>
                                             <constraint firstItem="sA8-sT-W5p" firstAttribute="top" secondItem="Vot-Ym-SKs" secondAttribute="bottom" id="KUL-56-d50"/>
+                                            <constraint firstItem="gLL-sD-skA" firstAttribute="bottom" secondItem="tGl-4p-URy" secondAttribute="bottom" constant="10" id="KrA-Ti-rUd"/>
                                             <constraint firstItem="Rf4-EF-Dfw" firstAttribute="leading" secondItem="gLL-sD-skA" secondAttribute="leading" constant="15" id="LsH-47-K5h"/>
                                             <constraint firstItem="gLL-sD-skA" firstAttribute="trailing" secondItem="7Hn-0x-yUV" secondAttribute="trailing" constant="15" id="M1M-B2-RRN"/>
                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="JaD-Vw-gr9" secondAttribute="trailing" constant="20" symbolic="YES" id="N1P-H2-GFv"/>
@@ -258,22 +279,27 @@
                                             <constraint firstItem="gLL-sD-skA" firstAttribute="trailing" secondItem="OeB-lF-O6w" secondAttribute="trailing" constant="15" id="NMx-WQ-tey"/>
                                             <constraint firstItem="gLL-sD-skA" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Gxj-iE-oeN" secondAttribute="trailing" symbolic="YES" id="Nyo-pm-JAB"/>
                                             <constraint firstItem="m4D-f6-SZe" firstAttribute="top" secondItem="OeB-lF-O6w" secondAttribute="bottom" constant="15" id="OKX-MO-FEW"/>
+                                            <constraint firstItem="AfB-Hm-bpz" firstAttribute="top" secondItem="16R-MF-yBA" secondAttribute="bottom" id="Q0W-8c-isL"/>
                                             <constraint firstItem="Gxj-iE-oeN" firstAttribute="top" secondItem="AvV-d1-0Yv" secondAttribute="bottom" constant="15" id="Qw8-hy-fBv"/>
                                             <constraint firstItem="Mac-3k-W2R" firstAttribute="trailing" secondItem="gLL-sD-skA" secondAttribute="trailing" id="Qwf-xw-xzo"/>
+                                            <constraint firstItem="gLL-sD-skA" firstAttribute="trailing" secondItem="AfB-Hm-bpz" secondAttribute="trailing" constant="15" id="RS8-Oe-8fG"/>
                                             <constraint firstItem="OeB-lF-O6w" firstAttribute="height" secondItem="AvV-d1-0Yv" secondAttribute="height" id="TNW-bX-ijQ"/>
                                             <constraint firstItem="Mdo-Cb-Stx" firstAttribute="top" secondItem="JaD-Vw-gr9" secondAttribute="bottom" constant="15" id="VEh-W5-SSd"/>
                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Mdo-Cb-Stx" secondAttribute="trailing" constant="20" symbolic="YES" id="WM7-ks-hdX"/>
                                             <constraint firstItem="gLL-sD-skA" firstAttribute="trailing" secondItem="dvO-UF-SzK" secondAttribute="trailing" constant="15" id="Y1a-f8-ZKt"/>
+                                            <constraint firstItem="AfB-Hm-bpz" firstAttribute="leading" secondItem="gLL-sD-skA" secondAttribute="leading" constant="15" id="Yva-Y5-E7Z"/>
                                             <constraint firstItem="xp7-kS-H2l" firstAttribute="top" secondItem="EHm-jQ-Qd1" secondAttribute="bottom" constant="15" id="a5y-pE-sm1"/>
                                             <constraint firstItem="Mac-3k-W2R" firstAttribute="leading" secondItem="gLL-sD-skA" secondAttribute="leading" id="agW-76-qbU"/>
                                             <constraint firstItem="UOm-s9-QMB" firstAttribute="top" secondItem="16R-MF-yBA" secondAttribute="bottom" id="as5-Da-jal"/>
                                             <constraint firstItem="e0w-x1-yuz" firstAttribute="top" secondItem="sA8-sT-W5p" secondAttribute="bottom" id="bez-M0-929"/>
                                             <constraint firstItem="gLL-sD-skA" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="m4D-f6-SZe" secondAttribute="trailing" symbolic="YES" id="e85-jV-14q"/>
+                                            <constraint firstItem="tGl-4p-URy" firstAttribute="leading" secondItem="TWn-iX-4I5" secondAttribute="leading" constant="15" id="g2g-hg-un0"/>
                                             <constraint firstItem="dmu-mk-xdN" firstAttribute="top" secondItem="e0w-x1-yuz" secondAttribute="bottom" constant="19" id="g9r-Qg-vJM"/>
                                             <constraint firstItem="Rf4-EF-Dfw" firstAttribute="top" secondItem="7Hn-0x-yUV" secondAttribute="bottom" constant="15" id="gKu-fO-x0O"/>
                                             <constraint firstItem="Vot-Ym-SKs" firstAttribute="top" secondItem="Mac-3k-W2R" secondAttribute="bottom" id="gzP-Ja-hzY"/>
                                             <constraint firstItem="gLL-sD-skA" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="xp7-kS-H2l" secondAttribute="trailing" symbolic="YES" id="hnv-j8-82v"/>
                                             <constraint firstItem="Xs3-Xw-mEM" firstAttribute="leading" secondItem="gLL-sD-skA" secondAttribute="leading" constant="15" id="jTM-j5-y2D"/>
+                                            <constraint firstItem="gLL-sD-skA" firstAttribute="bottom" secondItem="AfB-Hm-bpz" secondAttribute="bottom" constant="10" id="jyv-xa-ZKO"/>
                                             <constraint firstItem="JaD-Vw-gr9" firstAttribute="top" secondItem="TWn-iX-4I5" secondAttribute="top" constant="20" id="l3z-8Y-CsA"/>
                                             <constraint firstItem="7Hn-0x-yUV" firstAttribute="height" secondItem="AvV-d1-0Yv" secondAttribute="height" id="m8T-I3-z9o"/>
                                             <constraint firstItem="7Hn-0x-yUV" firstAttribute="leading" secondItem="gLL-sD-skA" secondAttribute="leading" constant="15" id="mxd-HS-HYZ"/>
@@ -293,6 +319,12 @@
                                             <constraint firstItem="AvV-d1-0Yv" firstAttribute="top" secondItem="Mdo-Cb-Stx" secondAttribute="bottom" constant="5" id="zlK-qa-RVv"/>
                                         </constraints>
                                         <viewLayoutGuide key="safeArea" id="gLL-sD-skA"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="5ic-rd-mWh"/>
+                                                <exclude reference="jyv-xa-ZKO"/>
+                                            </mask>
+                                        </variation>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -318,10 +350,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="k2k-Py-OnP"/>
                     </view>
-                    <size key="freeformSize" width="320" height="700"/>
+                    <size key="freeformSize" width="320" height="800"/>
                     <connections>
                         <outlet property="mBottomSpace" destination="Wtm-qq-v19" id="BxB-GN-FQl"/>
-                        <outlet property="name" destination="AvV-d1-0Yv" id="UMw-jm-TGa"/>
+                        <outlet property="tfEmail" destination="OeB-lF-O6w" id="K3g-kv-WIQ"/>
+                        <outlet property="tfLastName" destination="7Hn-0x-yUV" id="omc-ks-HKH"/>
+                        <outlet property="tfName" destination="AvV-d1-0Yv" id="yd9-p4-Al0"/>
+                        <outlet property="tfPatronimic" destination="EHm-jQ-Qd1" id="seb-cg-8Bt"/>
+                        <outlet property="tfPhone" destination="Xs3-Xw-mEM" id="6CE-bT-6hr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nVs-8R-Zqc" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -378,8 +414,8 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="335" height="43.5"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K5R-t8-e6g" customClass="PaddingLabel" customModule="sasheramed" customModuleProvider="target">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="335" height="50"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K5R-t8-e6g" customClass="PaddingLabel" customModule="sasheramed" customModuleProvider="target">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="335" height="43.5"/>
                                                                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
